Fri May 28 01:50:55 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/ast_module.h:
        * TAO_IDL/ast/ast_module.cpp:
        
          Added flag to skip some redundant passes through previous
          openings during lookups.

Thu May 27 13:53:00 UTC 2010  Simon Massey  <sma at prismtech dot com>

        * TAO_IDL/include/utl_string.h:
        * TAO_IDL/util/utl_string.cpp:

          Allow for the force_copy option with utl_string copies.

        * TAO_IDL/include/utl_scope.h:
        * TAO_IDL/util/utl_scope.cpp:

          Reverted the refactored UTL_ScopeActiveIterator class. Annoyingly
          some uses of this class require that the original source is
          changed whilst the itterator continues to be still valid. The new
          version didn't allow this.

        * TAO_IDL/be/be_identifier_helper.cpp:
        * TAO_IDL/ast/ast_expression.cpp:

          Updated due to changes to the utl_string class.

Thu May 27 08:58:39 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * bin/tao_orb_tests.lst:
          Disabled 3755_Ext tests on LynxOS.

Wed May 26 19:27:18 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/ami4ccm_sendc_ex_idl.cpp:

          In generation of the AMI4CCM_xxx interface, added code to
          regenerate the operations from all the ancestors.

        * TAO_IDL/be/be_visitor_connector/connector_ami_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/connector_ami_exh.cpp:
        * TAO_IDL/be/be_visitor_connector/facet_ami_exs.cpp:
        * TAO_IDL/be/be_visitor_connector/executor_ami_exh.cpp:
        * TAO_IDL/be/be_visitor_connector/facet_ami_exh.cpp:

          Cosmetic changes, comments fixes, layout fixes.

Wed May 26 14:38:08 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:

          Eliminated generation of declarations for get_all_emitters()